# qut-gradescope-autosubmitter

./: .gitignore  CLI_REFERENCE.md  CREDENTIALS.md  GITHUB_ACTIONS_SETUP.md  MANIFEST.in  README.md  TESTING_GUIDE.md  gradescope.json  gradescope.py  gradescope.yml  pyproject.toml  setup_automation.py
.github/workflows/: auto-submit.yml  ci.yml  manual-submit.yml  matrix-submit.yml  python-publish.yml  scheduled-submit.yml
.specstory/history/: 2025-09-04_15-32Z-preparing-playwright-script-for-linkedin.md
gradescope_autosubmitter/: __init__.py  cli.py  config.py  core.py  credentials.py  rich_console.py  ui_config.py
tests/: conftest.py  test_bundling.py  test_cli.py  test_config.py  test_grade_polling.py  test_session.py
